homelab/k3s/base/observability/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: observability
  labels:
    app.kubernetes.io/name: kube-state-metrics
    app.kubernetes.io/version: 2.18.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kube-state-metrics
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kube-state-metrics
        app.kubernetes.io/version: 2.18.0
    spec:
      automountServiceAccountToken: true
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: kube-state-metrics
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: kube-state-metrics
          image: registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.18.0@sha256:e780845683dabd141d25d88a9d7221b567844832bf4f48d1c52f081861174661
          args:
            - --host=0.0.0.0
            - --port=8080
            - --telemetry-host=0.0.0.0
            - --telemetry-port=8081
            - --resources=namespaces,nodes,pods
            - --metric-labels-allowlist=namespaces=[observability.remote-development/workspace-id]
          ports:
            - name: metrics
              containerPort: 8080
              protocol: TCP
            - name: telemetry
              containerPort: 8081
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: telemetry
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /livez
              port: metrics
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 65534
            runAsNonRoot: true
            runAsUser: 65534
      terminationGracePeriodSeconds: 30
