homelab/k3s/base/observability/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: observability
spec:
  selector:
    app.kubernetes.io/name: kube-state-metrics
  ports:
    - name: metrics
      port: 8080
      protocol: TCP
      targetPort: metrics
  type: ClusterIP
